Formatting clean-up

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
-<BODY BGCOLOR="#ffffff">
+<BODY>
 <H2>
 Setting the Java build path</H2>
 <P>
@@ -185,7 +185,7 @@ It is also possible to query for the resolved classpath of a project, using
 This operation triggers initialization of involved variable(s) and/or container(s) if necessary. Note that many Java Model operations
 implicitly cause the Java build path to be resolved, e.g. computing a project package fragment roots requires the build path to be resolved.
 
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
+<P><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
 </BODY>
 </HTML>
