--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_codeassist.htm
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
-<BODY BGCOLOR="#ffffff">
+<BODY>
 <H2>
 Performing CodeAssist on Java code</H2>
 <P>
@@ -21,7 +21,7 @@ There are two kinds of manipulation:
 <li>Code completion - compute the completion of a Java token.</li>
 <li>Code selection - answer the Java element at a given position.</li>
 </ul>
-</P>
+<p></P>
 <P>
 Note: completion and selection answer results for a classfile only if it has attached source.
 </P>
@@ -63,7 +63,7 @@ When you are not interested by all the result kinds, a simple way to perform cod
    
    // Compute proposals
    unit.codeComplete(offset, requestor);
-</pre></font></P>
+</pre></font><p></P>
 
 <H4>
 Code completion options
@@ -76,7 +76,7 @@ The options of code completion can be changed by other plugins. You can modify J
 <li>Activate Visibility Sensitive Completion: when active, completion doesn't answer what you can not see (e.g. you can not see private methods of a super class).</li>
 <li>Automatic Qualification of Implicit Members: when active, completion automatically qualifies completion on implicit field references and message expressions.</li>
 </ul>
-</P>
+<p></P>
 
 <P>
 To know how to modify JDT Core options see: <a href="../guide/jdt_api_options.htm"> What are the JDT Core options?</a></P>
@@ -117,6 +117,6 @@ If the length of the selection equals 0 then the selection is computed with the 
 When the offset is after the first character of <i>fooMethod</i> and the length is 0 then the selection is <i>fooMethod</i>. But if the length is 5 then the selection is <i>ooMet</i>.
 
 
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a></P>
+<P><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a></P>
 </BODY>
 </HTML>
