--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -11,7 +11,7 @@
           
   <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
-<body bgcolor="#ffffff">
+<body>
 <h2> Compiling Java code</h2>
 <p> The JDT plug-ins include an incremental and batch Java compiler for building 
 Java .class files from source code. There is no direct API provided by the 
@@ -41,7 +41,7 @@ control which resource files are copied using the resource filter. For example,
 to filter files ending with '.ignore' and folders named 'META-INF', use:
 <font color="#4444cc">
 <pre>   Hashtable options = JavaCore.getOptions();<br>   options.put(JavaCore.CORE_JAVA_BUILD_RESOURCE_COPY_FILTER, "*.ignore,META-INF/");<br>   JavaCore.setOptions(options);<br></pre>
-</font></p>
+</font><p></p>
 <p> Filenames are filtered if they match one of the supplied patterns. Entire 
 folders are filtered if their name matches one of the supplied folder names 
 which end in a path separator.</p>
@@ -124,7 +124,7 @@ can use the <b><a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#
 </pre></font> You can add an action on the reported problems in the acceptProblem(IProblem) 
 method. In this example, the reported problem will be that <b>Zork cannot 
 be resolved or is not a valid superclass</b> and its id is <b>IProblem.SuperclassNotFound</b>
- . </p>
+ . <p></p>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved.">
 </a>
 </p>
