--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
-<BODY BGCOLOR="#ffffff">
+<BODY>
 <H2>
 Manipulating Java code</H2>
 <P>
@@ -173,7 +173,7 @@ These method names start with <b>new...</b>. The following is an example that cr
 		}
 	}
 </pre></font>
-</P>
+<p></P>
 <P>The following snippet is the corresponding code that generates the output.
 <font color='#4444CC'><pre>
 		AST ast = new AST();
@@ -226,7 +226,7 @@ These method names start with <b>new...</b>. The following is an example that cr
 		type.bodyDeclarations().add(methodDeclaration);
 		unit.types().add(type);
 </pre></font>
-</P>
+<p></P>
 <h4>Retrieving extra positions</h4>
 The DOM/AST node contains only a pair of positions (the starting position and the length of the node). This is not always
 sufficient. In order to retrieve intermediate positions, the <b><a href="../reference/api/org/eclipse/jdt/core/compiler/IScanner.html">IScanner</a></b> API should be used. For example,
@@ -324,7 +324,7 @@ There are three kinds of events that are supported by <b>JavaCore</b>:
 <li><a href="../reference/api/org/eclipse/jdt/core/ElementChangedEvent.html#POST_RECONCILE"><b>POST_RECONCILE</b></a>: 
       Listeners of this event kind will get notified at the end of a reconcile operation on a working copy
       (see <a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#reconcile()"><b>IWorkingCopy.reconcile()</b></a>).</li>
-</ul> </P>
+</ul> <p></P>
 <P>
 Java element change listeners are similar conceptually to resource change listeners
 (described in
@@ -398,7 +398,7 @@ Several kinds of operations can trigger a Java element change notification. Here
       project's classpath, e.g. using <b>IFile.setContents</b> (the delta indicates that a compilation unit was changed, but 
       <a href="../reference/api/org/eclipse/jdt/core/IJavaElementDelta.html#F_FINE_GRAINED">no finer-grained information</a>
       is provided as this was not done through a Java Model operation)</li>
-</ul></P>
+</ul><p></P>
 <P>
 As for 
 <a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/IResourceDelta.html"><b>IResourceDelta</b></a> 
@@ -433,7 +433,7 @@ Whereas the following will trigger 1 Java element change event: </P>
         null);
 </pre></font>
 
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
+<P><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
 </BODY>
 </HTML>
