--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -8,7 +8,7 @@
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
-<BODY BGCOLOR="#ffffff">
+<BODY>
 <H2>
 Manipulating JDT Core options</H2>
 <P>
@@ -21,7 +21,7 @@ Only four methods are necessary to manipulate the options:
 <li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOptions()">JavaCore.getOptions()</a> - Answers the current values of the options.</li>
 <li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setOptions(java.util.Hashtable)">JavaCore.setOptions(Hashtable newOptions)</a> - Replaces the options values by new values.</li>
 </ul>
-</P>
+<p></P>
 
 <P>
 The options are manipulated as a hashtable of all known configurable options with their values.
@@ -51,7 +51,7 @@ If you want to keep the current options and modify only one of them:
    
    // Set the new options
    JavaCore.setOptions(options);
-</pre></font></P>
+</pre></font><p></P>
 
 <H3>JDT Core options descriptions</h3>
 
@@ -81,7 +81,7 @@ organisation with the option id surrounded with parenthesis and the default valu
 </tr>
 <tr valign="top">
 <td rowspan=2>When generated, this attribute will enable local variable names to be displayed in the debugger, only in places where variables are definitely assigned (.class file is then bigger)</td>
-<td><i><b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#GENERATE">GENERATE</a></b></i></b></td>
+<td><i><b><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#GENERATE">GENERATE</a></b></i></td>
 </tr>
 <tr valign="top">
 <td><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#DO_NOT_GENERATE">DO_NOT_GENERATE</a></td>
@@ -343,7 +343,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td rowspan=1>Specify the maximum number of problems reported on each compilation unit (if the maximum is zero then all problems are reported).</td>
 <td>a positive integer. <br><b><i>Default value is 100</i></b></td>
 </tr>
-</tr>
+
 
 </table>
 
@@ -363,7 +363,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td rowspan=1>Specify filters to control the resource copy process. (&lt;name&gt; is a file name pattern (only * wild-cards allowed) or the name of a folder which ends with '/')</td>
 <td>{&lt;name&gt;[,&lt;name&gt;]*}.<br><b><i>Default value is ""</i></b></td>
 </tr>
-</tr>
+
 
 <tr>
 <td colspan=2><b>Abort if Invalid Classpath</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#CORE_JAVA_BUILD_INVALID_CLASSPATH">CORE_JAVA_BUILD_INVALID_CLASSPATH</a>)</td>
@@ -405,7 +405,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td rowspan=1>Get the encoding format for compiled sources. This setting is read-only, it is equivalent to <a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/ResourcesPlugin.html#getEncoding()">ResourcesPlugin.getEncoding()</a>.</td>
 <td>any of the supported encoding name. <br><b><i>Default value is platform default</i></b></td>
 </tr>
-</tr>
+
 
 </table>
 
@@ -480,7 +480,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td rowspan=1>Enable splitting of long lines (exceeding the configurable length). Length of 0 will disable line splitting</td>
 <td>a positive integer. <br><b><i>Default value is 80</i></b></td>
 </tr>
-</tr>
+
 
 <tr>
 <td colspan=2><b>Compacting Assignment</b>   (<a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#FORMATTER_COMPACT_ASSIGNMENT">FORMATTER_COMPACT_ASSIGNMENT</a>)</td>
@@ -511,7 +511,7 @@ When enabling this option, the compiler will issue an error or a warning for hid
 <td rowspan=1>When using spaces, set the amount of space characters to use for each indentation mark.</td>
 <td>a positive integer. <br><b><i>Default value is 4</i></b></td>
 </tr>
-</tr>
+
 
 </table>
 
