--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_run.htm
@@ -11,7 +11,7 @@
           
   <link rel="stylesheet" type="text/css" href="../book.css">
 </head>
- <body bgcolor="#ffffff">
+ <body>
 <h2> Running a Java program</h2>
 <p> The JDT API includes facilities for launching a Java program using the 
 VM install that is currently configured by the user for a Java project.&nbsp;&nbsp;</p>
