--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -6,7 +6,7 @@
 
 
 <link rel="stylesheet" type="text/css" href="../book.css"></head>
-<body bgcolor="#ffffff">
+<body>
 <h2>
 Using the Java search engine</h2>
 <p> Your plug-in can use the JDT API to search Java projects in the workspace
@@ -169,7 +169,7 @@ inaccurate. Some possible reasons why a match could be inaccurate are:
 <li>The user code would not compile. For example, it refers to a class that is not yet defined.</li>
 </ul> 
 
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
+<p><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
 
 </body></html>
