--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_new_wizard_page.htm
@@ -17,65 +17,66 @@
   The page initializes the super class field with &quot;junit.framework.TestCase&quot; 
   and adds a checkbox that controls whether method stubs for the setUp() and tearDown() 
   method are to be created.</p>
-<pre><font color="#4444CC">public class TestCaseWizardPage extends NewTypeWizardPage {<br>	<br>	private Button fCreateStubs;
+<pre><font color="#4444CC">public class TestCaseWizardPage extends NewTypeWizardPage {
+    private Button fCreateStubs;
 
-	public TestCaseWizardPage() {
-		super(true, &quot;TestCaseWizardPage&quot;);
-	}
+    public TestCaseWizardPage() {
+        super(true, &quot;TestCaseWizardPage&quot;);
+    }
 
-	/**
-	 * The wizard managing this wizard page must call this method
-	 * during initialization with a corresponding selection.
-	 */   
-	public void init(IStructuredSelection selection) {
-		IJavaElement jelem= getInitialJavaElement(selection);
-		initContainerPage(jelem);
-		initTypePage(jelem);
-		// define the components for which a status is desired
-		IStatus[] status= new IStatus[] {
-			fContainerStatus,
-			isEnclosingTypeSelected() ? fEnclosingTypeStatus : fPackageStatus,
-			fTypeNameStatus,
-		};
-		updateStatus(status);
-	}
+    /**
+     * The wizard managing this wizard page must call this method
+     * during initialization with a corresponding selection.
+     */   
+    public void init(IStructuredSelection selection) {
+        IJavaElement jelem= getInitialJavaElement(selection);
+        initContainerPage(jelem);
+        initTypePage(jelem);
+        // define the components for which a status is desired
+        IStatus[] status= new IStatus[] {
+            fContainerStatus,
+            isEnclosingTypeSelected() ? fEnclosingTypeStatus : fPackageStatus,
+            fTypeNameStatus,
+        };
+        updateStatus(status);
+    }
 
-	public void createControl(Composite parent) {
-		initializeDialogUnits(parent);
-		Composite composite= new Composite(parent, SWT.NONE);
-		int nColumns= 4;
-		GridLayout layout= new GridLayout();
-		layout.numColumns= nColumns;
-		composite.setLayout(layout);
+    public void createControl(Composite parent) {
+        initializeDialogUnits(parent);
+        Composite composite= new Composite(parent, SWT.NONE);
+        int nColumns= 4;
+        GridLayout layout= new GridLayout();
+        layout.numColumns= nColumns;
+        composite.setLayout(layout);
 
-		// Create the standard input fields
-		createContainerControls(composite, nColumns);
-		createPackageControls(composite, nColumns);
-		createSeparator(composite, nColumns);
-		createTypeNameControls(composite, nColumns);
-		createSuperClassControls(composite, nColumns);
+        // Create the standard input fields
+        createContainerControls(composite, nColumns);
+        createPackageControls(composite, nColumns);
+        createSeparator(composite, nColumns);
+        createTypeNameControls(composite, nColumns);
+        createSuperClassControls(composite, nColumns);
 
-		// Create the checkbox controlling whether we want stubs
-		fCreateStubs= new Button(composite, SWT.CHECK);
-		fCreateStubs.setText(&quot;Add 'setUp()' and 'tearDown()' to new class&quot;);
-		GridData gd= new GridData();
-		gd.horizontalSpan= nColumns;
-		fCreateStubs.setLayoutData(gd);
+        // Create the checkbox controlling whether we want stubs
+        fCreateStubs= new Button(composite, SWT.CHECK);
+        fCreateStubs.setText(&quot;Add 'setUp()' and 'tearDown()' to new class&quot;);
+        GridData gd= new GridData();
+        gd.horizontalSpan= nColumns;
+        fCreateStubs.setLayoutData(gd);
 
-		setControl(composite);
+        setControl(composite);
 
-		// Initialize the super type field and mark it as read-only
-		setSuperClass(&quot;junit.framework.TestCase&quot;, false);
-	}
+        // Initialize the super type field and mark it as read-only
+        setSuperClass(&quot;junit.framework.TestCase&quot;, false);
+    }
 
-	protected void createTypeMembers(IType newType, ImportsManager imports, IProgressMonitor monitor) throws CoreException {
-		if (fCreateStubs.getSelection()) {
-			String setUpMathod= &quot;public void setUp() {}&quot;;
-			newType.createMethod(setUpMathod, null, false, null);
+    protected void createTypeMembers(IType newType, ImportsManager imports, IProgressMonitor monitor) throws CoreException {
+        if (fCreateStubs.getSelection()) {
+            String setUpMathod= &quot;public void setUp() {}&quot;;
+            newType.createMethod(setUpMathod, null, false, null);
 
-			String tearDownMathod= &quot;public void setUp() {}&quot;
-			newType.createMethod(tearDownMathod, null, false, null); 
-		}
+            String tearDownMathod= &quot;public void setUp() {}&quot;
+            newType.createMethod(tearDownMathod, null, false, null); 
+        }
    }
 }</font></pre>
 <p><a href="../hglegal2002.htm"><img border="0" src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002. All Rights Reserved."> 
