--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
@@ -22,10 +22,10 @@
         Open the Search dialog by either: 
         <ul>
           <li>
-            Clicking the&nbsp;<strong><strong>Search</strong></strong> button in the toolbar or
+            Clicking the <strong>Search</strong> button in the toolbar or
           </li>
           <li>
-            Pressing&nbsp;<strong><strong>Ctrl+H</strong></strong> or
+            Pressing <strong>Ctrl+H</strong> or
           </li>
           <li>
             Selecting <strong>Search &gt; Search</strong> from the menu bar.
@@ -36,24 +36,24 @@
         Select the <strong>Java Search</strong> tab.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Search String</strong></strong> field, type the string for which you want to search, using wildcards as needed.
+        In the <strong>Search String</strong> field, type the string for which you want to search, using wildcards as needed.
       </li>
       <li>
         You can also choose a previous search expression from the drop-down list. Selecting a previous search expression restores all values associated with that previous search
         in the dialog.
       </li>
       <li>
-        Select the Java element type in the&nbsp;<strong><strong>Search For</strong></strong> area.
+        Select the Java element type in the <strong>Search For</strong> area.
       </li>
       <li>
-        Narrow your search in the&nbsp;<strong><strong>Limit To</strong></strong> area, or select&nbsp;<strong><strong>All occurrences</strong></strong> to search for references
+        Narrow your search in the <strong>Limit To</strong> area, or select <strong>All occurrences</strong> to search for references
         and declarations to a Java element.
       </li>
       <li>
-        Optionally, use the&nbsp;<strong><strong>Scope</strong></strong> area to narrow the scope of your search.
+        Optionally, use the <strong>Scope</strong> area to narrow the scope of your search.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Search</strong></strong>, and the search is carried out. The results are displayed in the Search view in the workbench window.
+        Click <strong>Search</strong>, and the search is carried out. The results are displayed in the Search view in the workbench window.
       </li>
     </ul>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
