--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -16,12 +16,10 @@
     <p>
       A build command compiles workbench resources. A build command can be triggered in different ways:
     </p>
-    <br>
-     <br>
-     
     <ul>
       <li>
-        Building automatically: If auto build is turned on (<strong>Window &gt; Preferences &gt; Perform build automatically on resource modification</strong>), then an
+        Building automatically: If auto build is turned on (<strong>Window &gt; Preferences &gt;
+        Perform build automatically on resource modification</strong>), then an
         incremental build occurs every time you save a modified workbench resource.
       </li>
       <li>
