--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-107.htm
@@ -34,7 +34,7 @@
       toolbar, the error message:
     </p>
     <p>
-      &nbsp;<em>The method println(java.lang.String) is undefined for the type java.lang.System</em>
+      <em>The method println(java.lang.String) is undefined for the type java.lang.System</em>
     </p>
     <p>
       is displayed in the editor at the point of the error.
@@ -63,9 +63,7 @@
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
+       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
