--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
@@ -24,7 +24,6 @@
       Clear the <strong>Window &gt; Preferences &gt; Perform build automatically on resource modification</strong> check box.
     </blockquote>
     <p>
-      <br>
        <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
     <p>
@@ -48,8 +47,7 @@
        <a href="../reference/ref-123.htm">Java Build path</a>
     </p>
     <p>
-      <a href="../hglegal2002.htm"><br>
-       <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
   </body>
 </html>
