--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
@@ -17,7 +17,8 @@
       Incremental build
     </h2>
     <p>
-      The&nbsp;<strong>Build</strong> command performs an incremental build that compiles all resources modified since the last build. To trigger an incremental build, either:
+      The <strong>Build</strong> command performs an incremental build that compiles all
+      resources modified since the last build. To trigger an incremental build, either:
     </p>
     <ul>
       <li>
@@ -45,7 +46,8 @@
       Full build
     </h2>
     <p>
-      To rebuild all workbench resources that have an associated builder (e.g. Java projects), select <strong>Project</strong> &gt; <strong>Rebuild All</strong> from the menu bar.
+      To rebuild all workbench resources that have an associated builder (e.g. Java projects),
+      select <strong>Project</strong> &gt; <strong>Rebuild All</strong> from the menu bar.
     </p>
     <h2>
       Full project build
@@ -53,7 +55,6 @@
     <p>
       To rebuild all resources contained in a project, select the project and select <strong>Project</strong> &gt; <strong>Rebuild Project</strong> from the menu bar.
     </p>
-    <br>
      
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
@@ -79,8 +80,7 @@
        <a href="../reference/ref-menu-project.htm">Project menu</a>
     </p>
     <p>
-      <a href="../hglegal2002.htm"><br>
-       <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
   </body>
 </html>
