--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-111.htm
@@ -15,7 +15,7 @@
     </h1>
     <p>
       A project&#39;s Java build path can either be defined when creating the project with the <strong>New Wizard</strong> or later in the project&#39;s property dialog. The Java
-      build path settings dialog is the same in both cases. To view and edit a project&#39;s Java build path, follow these steps:<br>
+      build path settings dialog is the same in both cases. To view and edit a project&#39;s Java build path, follow these steps:
     </p>
     <ol>
       <li>
@@ -31,16 +31,14 @@
         Define the source entries for the build path on the <strong>Source</strong> page: 
         <ul>
           <li>
-            Click the&nbsp;<strong><strong>Use source folders contained in the project</strong></strong> radio button to use folders instead of the project itself to contain
+            Click the <strong>Use source folders contained in the project</strong> radio button to use folders instead of the project itself to contain
             source containers.<br>
-             Click the&nbsp;<strong><strong>Create New Folder</strong></strong> or <strong><strong>Add Existing Folder</strong></strong> buttons to add source folders to the Java
+             Click the <strong>Create New Folder</strong> or <strong>Add Existing Folder</strong> buttons to add source folders to the Java
             build path.<br>
-             The&nbsp;<strong><strong>Remove</strong></strong> button removes the selected folder(s) from the build path,&nbsp;<strong>Edit</strong> lets you modify the selected
-            entry.<br>
-            <br>
+             The <strong>Remove</strong> button removes the selected folder(s) from the build path, <strong>Edit</strong> lets you modify the selected entry.
           </li>
           <li>
-            For simple projects, click the&nbsp;<strong><strong>Use the project as source folder</strong></strong> radio button to use the project itself as the folder for source
+            For simple projects, click the <strong>Use the project as source folder</strong> radio button to use the project itself as the folder for source
             code. This adds an entry for the project itself to the Java build path.
           </li>
         </ul>
@@ -59,7 +57,6 @@
       </li>
     </ol>
     <p>
-      <br>
        <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
     <p>
@@ -82,8 +79,7 @@
        <a href="../reference/ref-123.htm">Java Build path</a>
     </p>
     <p>
-      <a href="../hglegal2002.htm"><br>
-       <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
   </body>
 </html>
