--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -17,25 +17,23 @@
       You can add a JAR file stored either in the workbench or anywhere in your file system to the build class path.
     </p>
     <p>
-      <br>
        To add a JAR to your build class path follow these steps:
     </p>
     <ol>
       <li>
-        Select the project, and from its pop-up menu, select <strong>Properties</strong>. In the Properties dialog, select the <strong>Java Build Path</strong> page.<br>
+        Select the project, and from its pop-up menu, select <strong>Properties</strong>.
+        In the Properties dialog, select the <strong>Java Build Path</strong> page.<br>
          Click the <strong>Libraries</strong> tab.<br>
-         You can now either add a JAR file which is contained in your workspace or which is somewhere else:<br>
-         
+         You can now either add a JAR file which is contained in your workspace or which is somewhere else:
+   
         <ul>
           <li>
-            to add a JAR file which is inside your workspace click the&nbsp;<strong><strong>Add JARs</strong></strong> button
+            to add a JAR file which is inside your workspace click the <strong>Add JARs</strong> button
           </li>
           <li>
-            to add an external JAR file click the&nbsp;<strong><strong>Add External JARs</strong></strong> button
+            to add an external JAR file click the <strong>Add External JARs</strong> button
           </li>
         </ul>
-        <br>
-        <br>
       </li>
       <li>
         In the dialog that appears, select the JAR file that you want to add.
@@ -63,8 +61,7 @@
        <a href="../reference/ref-123.htm">Java Build path</a>
     </p>
     <p>
-      <a href="../hglegal2002.htm"><br>
-       <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
   </body>
 </html>
