--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -27,8 +27,9 @@
         In the Properties page, select the <strong>Java Build Path</strong> page.
       </li>
       <li>
-        On the <strong>Libraries</strong> tab, click&nbsp;<strong><strong>Add Variable</strong></strong> for adding a variable that refers to a JAR file.<br>
-         The <strong>New Variable Classpath Entry</strong> dialog appears which shows all available classpath variables. You can&nbsp;<strong>Edit...</strong> New... a variable or
+        On the <strong>Libraries</strong> tab, click <strong>Add Variable</strong> for adding a variable that refers to a JAR file.<br>
+         The <strong>New Variable Classpath Entry</strong> dialog appears which shows all available classpath variables.
+         You can <strong>Edit...</strong> New... a variable or
         create a new variable with <strong>New...</strong>.<br>
          <img src="../images/classpathVar.gif" alt="Classpath variable dialog" width="625" height="530"><br>
       </li>
@@ -39,12 +40,14 @@
         Enter the variable&#39;s name and path then press <strong>OK</strong>.
       </li>
       <li>
-        If the variable resolves to a folder, you have to specify a path extension that points to a JAR. To do this press the&nbsp;<strong>Extend...</strong> button. If the
+        If the variable resolves to a folder, you have to specify a path extension that points to a JAR.
+        To do this press the <strong>Extend...</strong> button. If the
         variable already resolves to a JAR file you can click&nbsp;<strong>OK</strong> directly.
       </li>
     </ol>
     <p>
-      <strong>Hint</strong>: You can add multiple variable entries at once to the Java build path: Select more than one variable in the <strong>New Variable Classpath
+      <strong>Hint</strong>: You can add multiple variable entries at once to the Java build path:
+      Select more than one variable in the <strong>New Variable Classpath
       Entry</strong> dialog, or multiple JAR files in the <strong>Variable Extension</strong> dialog.<br>
       <br>
     </p>
