--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-116.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-116.htm
@@ -14,7 +14,7 @@
       Attaching source to a class path variable
     </h1>
     <p>
-      When attaching source for a class path variable entry, both the path to the&nbsp;<strong>Archive</strong> and the&nbsp;<strong>Root Path</strong> must be defined by
+      When attaching source for a class path variable entry, both the path to the&nbsp;<strong>Archive</strong> and the <strong>Root Path</strong> must be defined by
       variables. Follow these steps to make a source attachment for a variable:
     </p>
     <ol>
@@ -24,16 +24,16 @@
       </li>
       <li>
         On the <strong>Libraries</strong> tab, select the class path variable to which you want to attach source.<br>
-         Click the&nbsp;<strong><strong>Attach Source</strong></strong> button to bring up the source attachment page.
+         Click the <strong>Attach Source</strong> button to bring up the source attachment page.
       </li>
       <li>
-        In&nbsp;<strong><strong>Archive Variable Path</strong></strong> field, use a variable to define the location of the archive. Use
-        the&nbsp;<strong><strong>Variable</strong></strong> button to select an existing variable and the&nbsp;<strong><strong>Browse</strong></strong> button to append an
+        In <strong>Archive Variable Path</strong> field, use a variable to define the location of the archive. Use
+        the <strong>Variable</strong> button to select an existing variable and the <strong>Browse</strong> button to append an
         optional path extension.
       </li>
       <li>
-        In the <strong><strong>Root Variable Path</strong></strong> field, enter a variable that stores the root path prefix of the JAR file.<br>
-         Click <strong><strong>Variable</strong></strong> to select an existing variable or&nbsp;<strong><strong>Browse</strong></strong> to append an optional path extension.
+        In the <strong>Root Variable Path</strong> field, enter a variable that stores the root path prefix of the JAR file.<br>
+        Click <strong>Variable</strong> to select an existing variable or&nbsp;<strong>Browse</strong> to append an optional path extension.
       </li>
       <li>
         Click <strong>OK</strong>.
