--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-117.htm
@@ -14,7 +14,6 @@
       Defining a classpath variable
     </h1>
     <p>
-      <br>
        Classpath variables are stored global to the workbench; in other words, all projects in the workbench can share the classpath variables.
     </p>
     <p>
@@ -29,23 +28,23 @@
         This page allows you to add, edit, or remove class path variables. 
         <ul>
           <li>
-            To add a new class path variable, click the <strong><strong>New...</strong></strong> button. The New Variable Entry page opens.
+            To add a new class path variable, click the <strong>New...</strong> button. The New Variable Entry page opens.
           </li>
           <li>
-            To edit an existing class path variable, select the variable in the&nbsp;<strong>Defined class path variables</strong> list and click
-            the&nbsp;<strong><strong>Edit...</strong></strong> button. The Edit Variable Entry page opens. <em>Note: The reserved class path variables, JRE_LIB, JRE_SRC, and
+            To edit an existing class path variable, select the variable in the <strong>Defined class path variables</strong> list and click
+            the <strong>Edit...</strong> button. The Edit Variable Entry page opens. <em>Note: The reserved class path variables, JRE_LIB, JRE_SRC, and
             JRE_SRCROOT cannot be edited in this page. To change them, change the default workbench JRE on the Installed JREs page (<strong>Window</strong> &gt;
             <strong>Preferences</strong> &gt; <strong>Java</strong> &gt; <strong>Installed JREs</strong>).</em>
           </li>
         </ul>
-        Type a name for the variable in the&nbsp;<strong><strong>Name</strong></strong> field.
+        Type a name for the variable in the <strong>Name</strong> field.
       </li>
       <li>
-        Type a path to be referenced by the variable in the&nbsp;<strong><strong>Path</strong></strong> field. You can also click the&nbsp;<strong><strong>File</strong></strong>
-        or&nbsp;<strong><strong>Folder</strong></strong> buttons to browse the file system.
+        Type a path to be referenced by the variable in the <strong>Path</strong> field. You can also click the <strong>File</strong>
+        or <strong>Folder</strong> buttons to browse the file system.
       </li>
       <li>
-        Click <strong>OK</strong> when you are done. The new or modified variable appears in the&nbsp;<strong>Defined class path variables</strong> list on the Preferences page.
+        Click <strong>OK</strong> when you are done. The new or modified variable appears in the <strong>Defined class path variables</strong> list on the Preferences page.
       </li>
     </ol>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
