--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-118.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-118.htm
@@ -13,7 +13,6 @@
     <h1>
       Deleting a classpath variable
     </h1>
-    <br>
      To delete an existing class path variable: 
     <ol>
       <li>
@@ -23,7 +22,7 @@
         Expand the <strong>Java</strong> category in the left pane, and select <strong>Classpath Variables</strong>.
       </li>
       <li>
-        Select the variable(s) you want to delete in the&nbsp;<strong>Defined class path variables</strong> list and click the&nbsp;<strong><strong>Remove</strong></strong>
+        Select the variable(s) you want to delete in the <strong>Defined class path variables</strong> list and click the <strong>Remove</strong>
         button. The variable(s) are removed from the classpath variables list on the preferences page.
       </li>
     </ol>
