--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-120.htm
@@ -33,7 +33,7 @@
         list, you must <a href="tasks-121.htm">add it</a>.
       </li>
       <li>
-        Click&nbsp;<strong><strong>OK</strong></strong>.
+        Click <strong>OK</strong>.
       </li>
     </ol>
     <strong>Note</strong>: The JRE_LIB, JRE_SRC and JRE_SRCROOT system variables are automatically updated when you change the default JRE. This may cause a build to occur if you
