--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-110.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-110.htm
@@ -14,9 +14,9 @@
       Working with build paths
     </h1>
     <p>
-      Setting up the proper Java build path is an important task when doing Java development. Without the correct Java build path, you cannot compile your code. In addition, you
-      cannot search or look at the type hierarchies for Java elements.<br>
-      <br>
+      Setting up the proper Java build path is an important task when doing Java development.
+      Without the correct Java build path, you cannot compile your code. In addition, you
+      cannot search or look at the type hierarchies for Java elements.
     </p>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
     <p>
@@ -43,8 +43,7 @@
        <a href="../reference/ref-19.htm">Installed JREs preference page</a>
     </p>
     <p>
-      <a href="../hglegal2002.htm"><br>
-       <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
     </p>
   </body>
 </html>
