--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-115.htm
@@ -14,7 +14,8 @@
       Attaching source to a JAR file
     </h1>
     <p>
-      You can attach source to a JAR file to enable source-level stepping and browsing of classes contained in a binary JAR file. Unless its source code is attached to a JAR file
+      You can attach source to a JAR file to enable source-level stepping and browsing of classes contained in a binary JAR file.
+      Unless its source code is attached to a JAR file
       in the workbench, you will not be able to view the source for the JAR file.
     </p>
     <p>
@@ -31,18 +32,22 @@
         Select the JAR file to which you want to attach source.
       </li>
       <li>
-        Click the&nbsp;<strong><strong>Attach Source</strong></strong> button to bring up the Source Attachments dialog. In the Attachments dialog, you can associate the JAR file
+        Click the <strong>Attach Source</strong> button to bring up the Source Attachments dialog.
+        In the Attachments dialog, you can associate the JAR file
         with another archive (either a JAR or a ZIP file).
       </li>
       <li>
-        In the&nbsp;<strong><strong>Archive</strong></strong> field, type or browse to select a file containing source code for the JAR file. The source archive can be either in
+        In the <strong>Archive</strong> field, type or browse to select a file containing source code for the JAR file.
+        The source archive can be either in
         the workbench or in the file system.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Root Path</strong></strong> field, type or browse to select the prefix path to the source code stored inside the archive. If you
-        click&nbsp;<strong><strong>Browse</strong></strong>, you can browse the contents of the JAR and select its root. Specifying the proper root path is critical to locating
-        the source for a type. A common prefix is&nbsp;<em>src</em>. For example, when looking for the source of&nbsp;<em>java.lang.Object</em>, then you would browse
-        to&nbsp;<em>src/java/lang/Object.java</em> (in this example,&nbsp;<em>src</em> is the prefix).
+        In the <strong>Root Path</strong> field, type or browse to select the prefix path to the source code stored inside the archive. If you
+        click <strong>Browse</strong>, you can browse the contents of the JAR and select its root.
+        Specifying the proper root path is critical to locating
+        the source for a type. A common prefix is <em>src</em>. For example, when looking for the source of <em>java.lang.Object</em>,
+        then you would browse
+        to <em>src/java/lang/Object.java</em> (in this example, <em>src</em> is the prefix).
       </li>
       <li>
         Click&nbsp;<strong><strong>OK</strong></strong>.
