--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-207.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-207.htm
@@ -12,17 +12,15 @@
     <h1>
       Using JUnit
     </h1>
-    <h1>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
-    </h1>
-    <a href="tasks-208.htm">Creating JUnit tests</a> <br>
+    <p>
+     <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+     <a href="tasks-208.htm">Creating JUnit tests</a> <br>
      <a href="tasks-209.htm">Creating JUnit test suites</a> <br>
      <a href="tasks-210.htm">Running JUnit</a> <br>
      <a href="tasks-211.htm">Debugging a Test Failure</a><a href="tasks-211.htm"></a> 
-    <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
     </p>
     <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
     </p>
     <h1>
