--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-208.htm
@@ -11,7 +11,9 @@
     <h1>
       Creating JUnit tests
     </h1>
-    To develop JUnit tests follow these steps to set-up your project: 
+    <p>
+      To develop JUnit tests follow these steps to set-up your project: 
+    </p>
     <ol>
       <li>
         Create a Java project
@@ -37,76 +39,84 @@
         Open the new wizard dialog by doing one of the following: 
         <ul>
           <li>
-            pressing <strong>Ctrl+N</strong> or
+            pressing <kbd>Ctrl</kbd>+<kbd>N</kbd> or
           </li>
           <li>
-            selecting <strong>File &gt; New &gt; Othe</strong>r from the menu bar or
+            selecting <span class="control">File &gt; New &gt; Othe</span>r from the menu bar or
           </li>
           <li>
-            pressing the <strong>Open the New Wizard</strong> toolbar button or
+            pressing the <span class="control">Open the New Wizard</span> toolbar button or
           </li>
         </ul>
       </li>
       <li>
-        Select <strong>Java &gt; Junit</strong> in the left pane and <strong>TestCase</strong> in the right pane
+        Select <span class="control">Java &gt; Junit</span> in the left pane and <span class="control">TestCase</span> in the right pane
       </li>
       <li>
-        Press <strong>Next</strong> <img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1">
+        <p>
+          Press <span class="control">Next</span>
+        </p>
+        
+        <p>
+          <img src="../images/tasks-208a.gif" width="500" height="500" alt="TestCase creation wizard page 1">
+        </p>
       </li>
       <li>
-        In the <strong>Source Folder</strong> field, enter the name of the source folder in which your test will be created. You can use the <strong>Browse</strong> button and
+        In the <span class="control">Source Folder</span> field, enter the name of the source folder in which your test will be created. You can use the <span class="control">Browse</span> button and
         select the source folder from the resulting dialog.
       </li>
       <li>
-        In the <strong>Package</strong> field, enter the name (empty name denotes the default package) of the package in which your test will be created. You can use the
-        <strong>Browse</strong> button and select the package from the resulting dialog.
+        In the <span class="control">Package</span> field, enter the name (empty name denotes the default package) of the package in which your test will be created. You can use the
+        <span class="control">Browse</span> button and select the package from the resulting dialog.
       </li>
       <li>
-        In the <strong>Test case</strong> field, enter the name for the test you are creating.
+        In the <span class="control">Test case</span> field, enter the name for the test you are creating.
       </li>
       <li>
-        In the <strong>Test class</strong>, enter (optionally) the name of the class that your test will be testing. Selecting a class for testing will later allow you to create
+        In the <span class="control">Test class</span>, enter (optionally) the name of the class that your test will be testing. Selecting a class for testing will later allow you to create
         test methods for public method in the selected class.
       </li>
       <li>
-        In the <strong>Superclass</strong> field, enter the name of the superclass of your test (this class must implement the <code>junit.framework.Test</code> interface).
+        In the <span class="control">Superclass</span> field, enter the name of the superclass of your test (this class must implement the <code>junit.framework.Test</code> interface).
       </li>
       <li>
         Use the checkboxes to select the methods that you want to create in the test.
       </li>
       <li>
-        If you left the <strong>Test class</strong> field empty, then press <strong>Finish</strong> to create the test.
+        If you left the <span class="control">Test class</span> field empty, then press <span class="control">Finish</span> to create the test.
       </li>
       <li>
-        If you entered the name of the class to be tested, then: 
+        <p>
+          If you entered the name of the class to be tested, then: 
+        </p>
         <ul>
           <li>
-            press <strong>Finish</strong> to create the test without generating test methods or
+            press <span class="control">Finish</span> to create the test without generating test methods or
           </li>
           <li>
-            press <strong>Next</strong> to select the public methods that you want to test
+            press <span class="control">Next</span> to select the public methods that you want to test
           </li>
         </ul>
-        <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2">
+        <p>        
+          <img src="../images/tasks-208b.gif" alt="TestCase creation wizard page 2">
+        </p>
       </li>
       <li>
         Use the checkbox tree control to select the methods for which you want the wizard to create tests
       </li>
       <li>
-        Select the <strong>Create tasks for generated Test methods</strong> if you want to add tasks that will remind you to implement the test methods
+        Select the <span class="control">Create tasks for generated Test methods</span> if you want to add tasks that will remind you to implement the test methods
       </li>
       <li>
-        Press <strong>Finish</strong>
+        Press <span class="control">Finish</span>
       </li>
     </ol>
-    <h1>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
-    </h1>
-    <a href="tasks-207.htm">Using JUnit</a> 
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
+      <a href="tasks-207.htm">Using JUnit</a> 
     </p>
     <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
     </p>
     <p>
