--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-210.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-210.htm
@@ -22,28 +22,21 @@
         Do one of the following: 
         <ul>
           <li>
-            From the menu bar, select <strong>Run &gt; Run as &gt; JUnit Test</strong> or
+            From the menu bar, select <span class="control">Run &gt; Run as &gt; JUnit Test</span> or
           </li>
           <li>
-            On the Workbench tool bar, press the dropdown menu on the <strong>Run</strong> button and select <strong>Run as &gt; JUnit Test</strong>
+            On the Workbench tool bar, press the dropdown menu on the <span class="control">Run</span> button and select <span class="control">Run as &gt; JUnit Test</span>
           </li>
         </ul>
       </li>
     </ul>
-    <h1>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </h1>
     <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="tasks-207.htm">Using JUnit</a><br>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
-    </p>
-    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
       <a href="../reference/ref-preferences-junit.htm">JUnit preference page</a>
-    </p>
-    <p>
-      &nbsp;
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
